<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    android:orientation="vertical"
    tools:context="com.example.mangotech2.a123ngo.ForgetChangePassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtnewpassword"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:alpha="0.9"
            android:background="@drawable/txtshape"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtrepassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:alpha="0.9"
            android:background="@drawable/txtshape"
            android:ems="10"
            android:hint="@string/re_type_new_password"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnchangepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnshape"
            android:text="@string/change_password"
            android:onClick="btnchangepassword"
            android:textColor="#fff" />
    </LinearLayout>


</LinearLayout>
