<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mangotech2.a123ngo.Contactusdialog">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
         android:src="@drawable/contactus"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:text="@string/contact_us"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:paddingTop="15dp"
            android:textColor="#000"
            android:layout_weight="1"/>

        <TextView
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:text="Thanks for reaching out. Our team will be happy to support you."
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <Button
                android:id="@+id/btncallus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/call_us"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="13sp"
                android:layout_weight="1"
                android:text="@string/email_us" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
